kubernetes/flask-app-deployment.yaml
# flask-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  namespace: my-app-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: bojanpetrov/flaskdocker:latest
          ports:
            - containerPort: 4000
