kubernetes/flask-db-statefulset.yaml
# flask-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: flask-db
  namespace: my-app-namespace
spec:
  serviceName: "flask-db-service"
  replicas: 1
  selector:
    matchLabels:
      app: flask-db
  template:
    metadata:
      labels:
        app: flask-db
    spec:
      containers:
        - name: flask-db
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
