kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-backend
  namespace: flaskdocker
spec:
  selector:
    app: flask-app
  ports:
  - port: 4000
    targetPort: 4000
    protocol: TCP
