kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-backend
spec:
  selector:
    app: flask-app
  ports:
  - port: 4000
    targetPort: 80
