kubernetes/postgre-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-db
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
  clusterIP: None  # Enables stable network identity for StatefulSet
